[gd_scene load_steps=33 format=3 uid="uid://b852bneiowgjh"]

[ext_resource type="Script" uid="uid://ci0om4nl6gebq" path="res://scripts/zumbi_boss.gd" id="1_igdkm"]
[ext_resource type="Texture2D" uid="uid://gbb3pjnh5xut" path="res://Sprites/Animação Frente.png" id="1_m15qu"]
[ext_resource type="Texture2D" uid="uid://03ij71m48c1u" path="res://Sprites/Animação de Costas.png" id="2_igdkm"]
[ext_resource type="Texture2D" uid="uid://xlyh2m5b1d32" path="res://Sprites/Animação de Lado Direito.png" id="3_6agqy"]
[ext_resource type="Texture2D" uid="uid://wwk4kjnfp782" path="res://Sprites/Barra_de_vida_vazia.png" id="5_3ygmr"]
[ext_resource type="Texture2D" uid="uid://dgi6348ykacpn" path="res://Sprites/Barra_de_vida_inimigo.png" id="6_bnnqm"]
[ext_resource type="Script" uid="uid://dlpws8v6yty48" path="res://scripts/texture_progress_bar_boss.gd" id="7_w1feo"]
[ext_resource type="Script" uid="uid://dex8dvhc7vjvc" path="res://cenas/label_boss1.gd" id="8_1fm14"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bjbex"]
size = Vector2(39.48053, 85.454575)

[sub_resource type="CircleShape2D" id="CircleShape2D_kramk"]
radius = 881.8035

[sub_resource type="AtlasTexture" id="AtlasTexture_ako7d"]
atlas = ExtResource("1_m15qu")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqsyf"]
atlas = ExtResource("1_m15qu")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sovnj"]
atlas = ExtResource("1_m15qu")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3og6v"]
atlas = ExtResource("1_m15qu")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xlkx"]
atlas = ExtResource("1_m15qu")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_151dw"]
atlas = ExtResource("1_m15qu")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gldyx"]
atlas = ExtResource("1_m15qu")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aeawl"]
atlas = ExtResource("1_m15qu")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvytq"]
atlas = ExtResource("1_m15qu")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tc1s3"]
atlas = ExtResource("2_igdkm")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qqkk"]
atlas = ExtResource("2_igdkm")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqxg0"]
atlas = ExtResource("2_igdkm")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6sb74"]
atlas = ExtResource("2_igdkm")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_13m4x"]
atlas = ExtResource("2_igdkm")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulraa"]
atlas = ExtResource("2_igdkm")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3v4r"]
atlas = ExtResource("2_igdkm")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iy02a"]
atlas = ExtResource("2_igdkm")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vn1b"]
atlas = ExtResource("3_6agqy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebrmj"]
atlas = ExtResource("3_6agqy")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ro7k"]
atlas = ExtResource("3_6agqy")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehx0t"]
atlas = ExtResource("3_6agqy")
region = Rect2(0, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ako7d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ako7d")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqsyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sovnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3og6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xlkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_151dw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gldyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aeawl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvytq")
}],
"loop": true,
"name": &"walk.down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tc1s3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qqkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqxg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sb74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13m4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulraa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3v4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iy02a")
}],
"loop": true,
"name": &"walk.up",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vn1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebrmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ro7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehx0t")
}],
"loop": true,
"name": &"walk.x",
"speed": 4.0
}]

[node name="zumbi_boss" type="CharacterBody2D" groups=["Enemy", "enemy"]]
position = Vector2(0.99999994, 1.9999999)
scale = Vector2(0.7, 0.7)
script = ExtResource("1_igdkm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
show_behind_parent = true
position = Vector2(-0.2597401, -4.415586)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_bjbex")

[node name="Hitbox" type="Area2D" parent="."]
scale = Vector2(1.1, 1.1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
show_behind_parent = true
position = Vector2(-1.2987016, -1.9480519)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_bjbex")

[node name="DetectionArea" type="Area2D" parent="." groups=["enemy"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
show_behind_parent = true
position = Vector2(-2.8571415, -2.8571424)
shape = SubResource("CircleShape2D_kramk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1.4285715, 0)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_ako7d")
animation = &"idle"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
scale = Vector2(0.5, 0.5)
transform = Transform2D(0.5, 0, 0, 0.5, 0, 0)

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 852.0
offset_top = -536.0
offset_right = 1104.0
offset_bottom = -496.0
grow_vertical = 0
max_value = 10000.0
texture_under = ExtResource("5_3ygmr")
texture_progress = ExtResource("6_bnnqm")
script = ExtResource("7_w1feo")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer/TextureProgressBar"]
layout_mode = 0
offset_left = 95.0
offset_top = -24.0
offset_right = 157.0
offset_bottom = -1.0
script = ExtResource("8_1fm14")
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
